--- a/ultraWeb/infantil.html
+++ b/ultraWeb/infantil.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/ultraWeb/assets/css/higieneBeleza.css">
+  <link rel="stylesheet" href="./assets/css/higieneBeleza.css">
   <title>UltraOfertas</title>
 </head>
 
@@ -18,7 +18,7 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/huggiesSupreme.svg" alt="">
+        <img src="./assets/img/huggiesSupreme.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -163,11 +163,15 @@
     <div class="divisor">
       <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
+
+
+
     <div class="boxCard">
 
       <div class="boxCardImg">
         <img src="../ultraWeb/assets/img/soBaby.svg" alt="">
       </div>
+
       <div class="boxcardText">
         <div class="product">
           <p class="productTitle">TALCO INFANTIL SÓ BABY</p>
