--- a/ultraWeb/selenio.html
+++ b/ultraWeb/selenio.html
@@ -22,10 +22,12 @@
         </div>
 
         <div class="productReview">
-            <p>O selênio é um elemento fundamental para o
-                funcionamento adequado do corpo humano. Embora seja necessário
-                apenas em
-                pequenas quantidades, desempenha diversas funções essenciais</p>
+            <p>É um micronutriente fundamental para o funcionamento adequado do
+                corpo humano. Auxiliando no fortalecimento da imunidade, além de
+                ser um potente aliado contra o envelhecimento precoce e
+                prevenção de doenças como ajudar no controle de hormônios da
+                tireóide.
+            </p>
         </div>
         <div class="fazerPedido">
             <div class="firstText">
@@ -51,7 +53,7 @@
             </div>
 
             <div class="cardDescription second">
-                <p><span class="firstWordCard">Energia Ilimitada:</span> regula
+                <p><span class="firstWordCard">Energia Ilimitada:</span> Regula
                     a tireoide,
                     mantendo seu
                     metabolismo em alta velocidade. <strong>Desperte com energia
@@ -61,7 +63,7 @@
 
             <div class="cardDescription third">
                 <img src="./assets/img/selenioProductHeartPg.svg" alt="">
-                <p><span class="firstWordCard">Coração Saudável:</span> ajuda a
+                <p><span class="firstWordCard">Coração Saudável:</span> Ajuda a
                     reduzir a
                     inflamação no
                     corpo, o
