--- a/ultraWeb/betacaroteno.html
+++ b/ultraWeb/betacaroteno.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../ultraWeb/assets/css/selenio.css">
-  <title>UltraCaps Selênio</title>
+  <link rel="stylesheet" href="./assets/css/selenio.css">
+  <title>UltraCaps Betacaroteno</title>
 </head>
 
 <body>
@@ -22,10 +22,12 @@
     </div>
 
     <div class="productReview">
-      <p>O betacaroteno é um composto natural presente em diversos alimentos de
-        cores alaranjadas, amarelas e verdes-escuras. No organismo humano, o
-        betacaroteno desempenha um papel importante ao ser convertido em
-        vitamina A.</p>
+      <p>É um suplemente percursor da vitamina A, contribui no fortalecimento do
+        sistema imunológico, auxilia no combate do colesterol e na prevenção do
+        envelhecimento precoce da pele e de doenças degenerativas, além de um
+        importante aliado para construção de um bronzeado natural e mais
+        duradouro.
+      </p>
     </div>
     <div class="fazerPedido">
       <div class="firstText">
@@ -44,23 +46,24 @@
       <div class="cardDescription first">
         <img src="./assets/img/olhoIcon.png" alt="">
         <p><span class="firstWordCard">Visão Radiante: </span>
-          O betacaroteno é a chave para uma visão nítida e saudável, essencial
+          É a chave para uma visão nítida e saudável, essencial
           para a visão noturna e a prevenção de condições
           oculares.<strong></strong></p>
       </div>
 
       <div class="cardDescription second">
-        <p><span class="firstWordCard">Proteção da Pele: </span>O betacaroteno
-          ajuda a manter a saúde da pele, promovendo a regeneração
+        <p><span class="firstWordCard">Proteção da Pele: </span> Ajuda a manter
+          a saúde da pele, promovendo a regeneração
           celular e a proteção contra danos causados pelos raios
-          UV.<strong></strong></p>
+          UV. Além de proporcionar um bronzeado mais duradouro.<strong></strong>
+        </p>
         <img src="./assets/img/selenioProductSkinpg.svg" alt="">
       </div>
 
       <div class="cardDescription third">
         <img src="./assets/img/immuneIconPNG.png" alt="">
         <p><span class="firstWordCard">Sistema Imunológico: </span>
-          O betacaroteno é fundamental para o funcionamento adequado do sistema
+          É fundamental para o funcionamento adequado do sistema
           imunológico, ajudando o corpo a combater infecções e doenças.
           <strong></strong>
         </p>
