feat tela de carregamento inicial

--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -11,7 +11,15 @@
 
 <body>
 
-
+    <div id="onLoadScreen" class="onLoadScreen">
+        <div class="img">
+            <img src="./logoUltraTexto-512-359png.png" alt=""
+                style="width: 250px;">
+        </div>
+        <div id="openText" class="texto">
+            Estamos preparando as ofertas para você...
+        </div>
+    </div>
     <div id="textBox" class="textBox visible">
 
         <img src="./assets/img/logoUltra.svg" alt=""
